--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Hello world!</h1>
 <button type="submit">To say hello again, press here!</button>
-<h3>Dev1 has been here!</h3>
+<h3>Duy has been here!</h3>
 </body>
 </html>
